@@ -1,3 +1,10 @@
+2011-01-27  Kai Habel  <kai.habel@gmx.de>
+
+	* DLD-FUNCTIONS/__init_fltk__.cc (__fltk_uigetfile__): Remove here.
+	* DLD-FUNCTIONS/__fltk_uigetfile__.cc: New file. 
+	* DLD-FUNCTIONS/module-files: Add __fltk_uigetfile__.cc.
+	Bug #32190.
+
 2011-01-27  John W. Eaton  <jwe@octave.org>
 
 	* DLD-FUNCTIONS/dlmread.cc (Fdlmread): Skip leading whitespace
